# pytorch_soo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: wip_documentation.md
experiments/: all_expts.sh  download_datasets.py  fast_cifar10.py  fast_mnist.py  get_ran_nlcg.py  jan_stat_images.ipynb  jan_stat_results.html  levenberg_expt_gen_pnnl.sh  levenberg_expts.py  levenberg_expts_pnnl.sh  levenberg_plots.ipynb  nlcg_coverage_gen.sh  nlcg_to_pkl.py  nn.py  nn_levenberg.py  nn_plots.ipynb  nn_plots_primed.ipynb  nn_sgd_priming.py  nn_stats.ipynb  nn_stats_primed.ipynb  runtime_boxplots.ipynb  sso_expt_gen_pnnl.sh  sso_expts_pnnl.py  sso_expts_pnnl.sh  sso_expts_pnnl_bfgs.sh  sso_expts_pnnl_bfgsi.sh  sso_expts_pnnl_dfp.sh  sso_expts_pnnl_dfpi.sh  sso_expts_pnnl_dy.sh  sso_expts_pnnl_fr.sh  sso_expts_pnnl_hs.sh  sso_expts_pnnl_kn.sh  sso_expts_pnnl_pr.sh  sso_expts_pnnl_sgd.sh  sso_expts_pnnl_sr1.sh  sso_expts_pnnl_sr1d.sh  sso_priming_expt_gen_pnnl.sh  sso_priming_expts_pnnl.py  sso_priming_expts_pnnl_bfgs.sh  sso_priming_expts_pnnl_fr.sh  (+8 more)
pytorch_soo/: __init__.py  line_search_spec.py  matrix_free_operators.py  matrix_operators.py  mfcr_levenberg.py  nonlinear_conjugate_gradient.py  optim_hfcr_newton.py  quasi_newton.py  solvers.py  trust_region.py
test/quasi_newton/: quasi_newton.py  test_objective_funcs.py
test/solvers/: solvers.py
