
[tool.poetry]
name = "pytorch-soo"
version = "0.1.0"
description = ""
authors = ["Eric Silk <esilk16@uw.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
pandas = "^1.4.2"
hyperopt = "^0.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
